--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "deep-thoughts",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.14.0",
+    "npm": "8.3.1"
+  },
   "description": "",
   "main": "server/server.js",
   "scripts": {
     "start" : "node server/server.js",
     "develop" : "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd../client && npm",
+    "install": "cd server && npm i && cd ../client && npm",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
 
